--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -144,7 +144,20 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn23" padding="1em unset" horizontalalign="center"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn23" padding="1em unset" horizontalalign="center">
+                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile9" on-click="Variables.goToPage_VendorApplication.invoke()">
+                            <wm-layoutgrid height="100%" name="layoutgrid10">
+                                <wm-gridrow height="100%" name="gridrow13">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" class="col-xs-3" name="gridcolumn28">
+                                        <wm-icon iconsize="3em" iconclass="wi wi-assignment" name="icon9"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn29">
+                                        <wm-label caption="Submit Vendor Application" class="p" fontsize="1.5" fontunit="em" name="label22"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
