New files added - [] Files modified - [leftnav.html,UserCreation.js,Cx2QueryExecutorServiceImpl.java,UserCreation.html,cx2-queries.hbm.xml,QueryExecutionController.java,MyCompany.html,servicedef.xml,VendorApplication.variables.json,intercept-urls.json,project-security-provider.xml,cx2_query.json,Cx2QueryExecutorService.java] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -65,7 +65,7 @@
                                     <wm-label class="col-md-3 control-label" name="label8" caption="Search Municipalities"></wm-label>
                                     <wm-container class="col-md-9" name="container5">
                                         <wm-search name="textSearchMunicipalities" placeholder="Start Typing" dataset="bind:Variables.GetMunicipalities.dataSet" searchkey="municipalityName" displaylabel="municipalityName" displayimagesrc="logo" datafield="All Fields"
-                                        on-submit="textSearchMunicipalitiesSubmit($event, $scope)"></wm-search>
+                                        on-submit="textSearchMunicipalitiesSubmit($event, $scope)" required="true"></wm-search>
                                     </wm-container>
                                 </wm-composite>
                             </wm-gridcolumn>
