New files added - [VendorAdminsServiceImpl.java,VendorAdmins.java,VendorAdminsDao.java,VendorAdminsController.java,VendorAdminsService.java] Files modified - [cx2_published_dataModel.json,CompanyMunicipalities.js,VendorServiceImpl.java,QueryExecutionController.java,Cx2QueryExecutorServiceImpl.java,UsersController.java,VendorApprovals.java,cx2_query.json,FormStatusesServiceImpl.java,MunicipalitiesServiceImpl.java,FormTypesServiceImpl.java,cx2-queries.hbm.xml,Vendor.java,VendorService.java,VendorController.java,StatesServiceImpl.java,Users.java,UsersService.java,CompanyMunicipalities.html,Cx2QueryExecutorService.java,UsersServiceImpl.java,db-connection-settings.json,Main.html,CompanyProfile.html,CompanyProfile.js,CompanyMunicipalities.variables.json,servicedef.xml,DataEntry.html,DataEntry.variables.json,CompanyProfile.variables.json,DataEntry.js] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -145,7 +145,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn23" padding="1em unset" horizontalalign="center">
-                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile9" on-click="Variables.goToPage_VendorApplication.invoke()">
+                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile9" on-click="Variables.goToPage_VendorApplication.invoke()" show="bind:(Variables.loggedInUser.dataSet.roles[0]==&quot;CXVendorAdmin&quot;)?false:true">
                             <wm-layoutgrid height="100%" name="layoutgrid10">
                                 <wm-gridrow height="100%" name="gridrow13">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" class="col-xs-3" name="gridcolumn28">
