--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -1,10 +1,116 @@
-<wm-page data-ng-controller="CompanyProfilePageController" pagetitle="Company Profile"> 
-    <wm-header content="header"></wm-header> 
-    <wm-top-nav content="topnav"></wm-top-nav> 
-    <wm-content> 
-        <wm-left-panel columnwidth="2" content="leftnav"></wm-left-panel> 
-        <wm-page-content columnwidth="10"> 
-        </wm-page-content> 
-    </wm-content> 
-    <wm-footer content="footer"></wm-footer> 
+<wm-page data-ng-controller="CompanyProfilePageController" pagetitle="Company Profile" name="page1">
+    <wm-header content="header" name="header1"></wm-header>
+    <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
+    <wm-content name="content1">
+        <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
+        <wm-page-content columnwidth="10" name="page_content1">
+            <wm-liveform novalidate="false" errormessage="" title="Vendor Info" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.UpdateVendorData.dataSet" captionalign="left" captionposition="top" name="liveform1">
+                <wm-layoutgrid columns="3" name="layoutgrid1">
+                    <wm-gridrow name="gridrow1">
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn1">
+                            <wm-form-field name="companyName" displayname="Company Name" show="true" primary-key="false" generator="assigned" key="companyName" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].companyName"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn2">
+                            <wm-form-field name="address1" displayname="Address1" show="true" primary-key="false" generator="assigned" key="address1" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].address1"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn3">
+                            <wm-form-field name="address2" displayname="Address2" show="true" primary-key="false" generator="assigned" key="address2" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].address2"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                    </wm-gridrow>
+                    <wm-gridrow name="gridrow2">
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn4">
+                            <wm-form-field name="city" displayname="City" show="true" primary-key="false" generator="assigned" key="city" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].city" inputtype="text"
+                            placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn5">
+                            <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].country"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn6">
+                            <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].postalCode"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                    </wm-gridrow>
+                    <wm-gridrow name="gridrow3">
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn7">
+                            <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="select" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].states"
+                            placeholder="Select value" displayexpression="stateName" orderby="stateName:asc"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn8">
+                            <wm-form-field name="companyPhone" displayname="Company Phone" show="true" primary-key="false" generator="assigned" key="companyPhone" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].companyPhone"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn9">
+                            <wm-form-field name="altPhone" displayname="Alternate Phone" show="true" primary-key="false" generator="assigned" key="altPhone" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].altPhone"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                    </wm-gridrow>
+                    <wm-gridrow name="gridrow4">
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn10">
+                            <wm-form-field name="faxNumber" displayname="Fax Number" show="true" primary-key="false" generator="assigned" key="faxNumber" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].faxNumber"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn11">
+                            <wm-form-field name="companyWebsite" displayname="Company Website" show="true" primary-key="false" generator="assigned" key="companyWebsite" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn12">
+                            <wm-form-field name="typeOfBusiness" displayname="Type Of Business" show="true" primary-key="false" generator="assigned" key="typeOfBusiness" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].typeOfBusiness"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                    </wm-gridrow>
+                    <wm-gridrow name="gridrow5">
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn13">
+                            <wm-form-field name="companyEmail" displayname="Company Email" show="true" primary-key="false" generator="assigned" key="companyEmail" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].companyEmail"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn14">
+                            <wm-form-field name="stateRegNumber" displayname="State Reg Number" show="true" primary-key="false" generator="assigned" key="stateRegNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn15">
+                            <wm-form-field name="numberOfEmployees" displayname="Number Of Employees" show="true" primary-key="false" generator="assigned" key="numberOfEmployees" type="integer" step="0" widget="number" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].numberOfEmployees"
+                            inputtype="number" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                    </wm-gridrow>
+                    <wm-gridrow name="gridrow6">
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn16">
+                            <wm-form-field name="businessClassification" displayname="Business Classification" show="true" primary-key="false" generator="assigned" key="businessClassification" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].businessClassification"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn17">
+                            <wm-form-field name="coi" displayname="Coi" show="true" primary-key="false" generator="assigned" key="coi" type="blob" widget="upload" maxchars="255" validationmessage="bind:Variables.CurrentVendorObj.dataSet.data[$i].coi"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn18">
+                            <wm-form-field name="insuranceCompany" displayname="Insurance Company" show="true" primary-key="false" generator="assigned" key="insuranceCompany" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].insuranceCompany"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                    </wm-gridrow>
+                    <wm-gridrow name="gridrow7">
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn19">
+                            <wm-form-field name="feinNumber" displayname="Fein Number" show="true" primary-key="false" generator="assigned" key="feinNumber" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].feinNumber"
+                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn22">
+                            <wm-form-field name="insuranceExpires" displayname="Insurance Expires" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" widget="date" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].insuranceExpires"
+                            placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn21">
+                            <wm-form-field name="contractorTypes" displayname="Contractor Types" show="true" primary-key="false" generator="assigned" key="contractorTypes" type="list" is-related="true" widget="select" defaultvalue="bind:Variables.CurrentVendorObj.dataSet.data[$i].contractorTypes"
+                            placeholder="Select value" displayexpression="contractorType" orderby="contractorType:asc"></wm-form-field>
+                        </wm-gridcolumn>
+                    </wm-gridrow>
+                    <wm-gridrow name="gridrow8">
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn20">
+                            <wm-form-field name="lastUpdated" displayname="Last Updated" show="true" primary-key="false" generator="assigned" key="lastUpdated" type="date" widget="date" defaultvalue="CURRENT_DATE" placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
+                        </wm-gridcolumn>
+                    </wm-gridrow>
+                </wm-layoutgrid>
+                <wm-form-action key="reset" display-name="Reset" show="true" class="form-reset btn-secondary" iconclass="wi wi-refresh" title="Reset" action="reset()" disabled="false" type="button" update-mode="true"></wm-form-action>
+                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+            </wm-liveform>
+        </wm-page-content>
+    </wm-content>
+    <wm-footer content="footer" name="footer1"></wm-footer>
 </wm-page>
